--- a/lab1/pewniaczki.html
+++ b/lab1/pewniaczki.html
@@ -3,6 +3,7 @@
 <head>
     <script src="//wi.arturk.pl/zen-style.js.php?styles[]=style-1&styles[]=style-2" defer></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pewniaczki - System Predykcji Meczów Piłkarskich</title>
 </head>
 <body>
